<resources>
    <string name="app_name">Rant</string>
    <string name="launcher_intro1">尽情吐槽😕，吐出心中不快。</string>
    <string name="launcher_intro2">匿名发言，不需在乎身边人看法。</string>
    <string name="launcher_intro3">给你赞同的内容点赞。</string>
    <string name="launcher_intro4">分享生活囧事👦</string>
    <string name="launcher_intro5">告别无聊。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--通用-->
    <string name="ip_server">http://120.24.92.198:8080/rant/</string>
    <string name="i_server">http://10.0.2.2:8080/</string>
    <string name="network_error">网络请求失败</string>
    <string name="http_error">服务器开个小差😅</string>
    <string name="wait_title">稍等</string>

    <!--引导页-->
    <string name="launcher_R">R</string>
    <string name="launcher_reg">开始</string>
    <string name="launcher_login">登录</string>
    <string name="launcher_info">Rant 文字社区</string>

    <!--注册界面-->
    <string name="register_topic">欢迎</string>
    <string name="register_intro">注册一个Rant社区账号，发布自己的内容，给其他内容评论和点赞。</string>
    <string name="register_hint_username">用户名</string>
    <string name="register_hint_password">密码</string>
    <string name="register_hint_confirm_password">确认密码</string>
    <string name="register_pwd_diff">两次输入的密码不一致。</string>
    <string name="register_null">不要忘记填写任何一项哦。</string>
    <string name="register_submit">提交</string>
    <string name="register_info">点击提交代表你同意了Rant社区发言规范，请你注册完毕后前往个人中心完善资料。</string>
    <string name="register_username_exist">此用户名已存在，换个试试。</string>

    <!--登陆界面-->
    <string name="login_topic">登录</string>
    <string name="login_intro">登入你的Rant社区账号。</string>
    <string name="login_hint_username">用户名</string>
    <string name="login_hint_password">密码</string>
    <string name="login_submit">登录</string>
    <string name="login_password_wrong">用户名不存在或密码错误</string>
    <string name="login_null">请输入用户名和密码。</string>


    <!--最新界面-->
    <string name="new_title">最新</string>


    <!--最热界面-->
    <string name="hot_title">最热</string>
    <string name="hot_sort_toast">评论数从高到低显示</string>
    <string name="hot_sort_toast_value">被赞数从高到低显示</string>


    <!--通知界面-->
    <string name="notify_title">动态</string>


    <!--更多界面-->
    <string name="more_title">更多</string>
    <string name="more_below_name">查看/编辑个人资料</string>
    <string name="more_rants">我发布的</string>
    <string name="more_cmts">我的评论</string>
    <string name="more_ups">我赞过的</string>
    <string name="more_downs">我踩过的</string>
    <string name="more_about">关于我们</string>
    <string name="more_logout">更换账号 / 退出</string>


    <!--RantDetail界面-->
    <string name="rant_title">Rant</string>
    <string name="rant_hidden_user_name">神秘人</string>
    <string name="rant_no_comment">暂无评论</string>
    <string name="rant_post_comment">发表评论</string>
    <string name="rant_send_report">发送到</string>


    <!--发布Rant界面-->
    <string name="post_title">发布新的Rant</string>
    <string name="post_content_hint">这里输入Rant内容</string>
    <string name="post_not_null">发布内容不能为空</string>
    <string name="post_text_limit">150字</string>
    <string name="post_button">发布</string>
    <string name="post_hidden_info">你正要发布一条匿名的Rant内容，别人无法查看你的个人信息，但你可以在个人中心管理这条内容，也可以收到关于这条内容的动态。</string>
    <string name="post_error_post_failed">发送失败</string>
    <string name="post_status_hidden">匿名</string>
    <string name="post_status_public">公开</string>

    <!--评论界面-->
    <string name="comment_title">回复</string>
    <string name="comment_content_hint">这里输入评论内容</string>
    <string name="comment_not_null">发布内容不能为空</string>
    <string name="comment_button">发送</string>
    <string name="comment_error_post_failed">发送失败</string>


    <!--通知界面-->
    <string name="notify_cmt_cmt_head">回复我:</string>
    <string name="notify_cmt_rant_head">我的Rant:</string>
    <string name="notify_star_flag_up">赞了你的Rant！</string>
    <string name="notify_star_flag_down">朝你扔了鸡蛋！</string>

    <!--个人主页-->
    <string name="profile_title">个人主页</string>
    <string name="profile_action">编辑</string>
    <string name="profile_value_left">声望:</string>

    <!--信息编辑-->
    <string name="dialog_edit_title">修改信息</string>
    <string name="dialog_edit_bio">个性签名</string>
    <string name="dialog_edit_location">地区</string>
    <string name="dialog_edit_submit">保存</string>
    <string name="dialog_photo_title">选择照片</string>
    <string name="dialog_photo_camera">拍照</string>
    <string name="dialog_photo_album">从相册选择</string>

    <!--关于界面-->
    <string name="about_title">关于Rant</string>
    <string name="about_version">Rant v1.0</string>
    <string name="about_intro">Rant社区是一个有趣的地方，你可以在这里分享身边趣事，发泄心中的不满或者是向他人求助。</string>
    <string name="about_contact">联系我们</string>
    <string name="about_email">tlyluvu@gmail.com</string>


    <!--微信接入-->
    <string name="app_id">wxcdd895619e783aa4</string>


</resources>
