<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_launcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xt.android.rant.LauncherActivity"
    android:background="@drawable/launcherbg">


    <!--R-->
    <TextView
        android:id="@+id/launcher_tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/launcher_R"
        android:textColor="#fff"
        android:textSize="120sp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="32dp"/>

    <!--介绍语-->
    <TextView
        android:id="@+id/launcher_tv_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_below="@id/launcher_tv_logo"
        android:text="@string/launcher_intro1"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"/>


    <!--底部文字-->
    <TextView
        android:id="@+id/launcher_tv_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/launcher_info"
        android:alpha="0.6"/>

    <!--登录按钮-->
    <Button
        android:id="@+id/launcher_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/launcher_tv_right"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.8"
        android:text="@string/launcher_login"
        android:width="200dp"
        android:background="@color/colorLoginButton"
        />

    <!--开始按钮-->
    <Button
        android:id="@+id/launcher_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/launcher_btn_login"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.8"
        android:text="@string/launcher_reg"
        android:width="200dp"
        android:background="@color/colorPrimary"
        />


</RelativeLayout>
