<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.xt.android.rant.fragment.LoginFragment"
              android:orientation="vertical"
              android:background="@color/colorPrimary">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_topic"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="32sp"
        android:alpha="0.87"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/login_intro"
        android:alpha="0.54"
        android:textColor="@color/white"/>

    <!--用户名-->
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/fragment_login_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="10dp"
                android:hint="@string/login_hint_username"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <!--密码-->
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_password"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/fragment_login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@null"
                android:layout_marginTop="10dp"
                android:hint="@string/login_hint_password"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <!--提交按钮-->
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/fragment_login_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login_submit"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/colorAccent"/>
    </android.support.v7.widget.CardView>



</LinearLayout>
