<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.xt.android.rant.fragment.MoreFragment"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/fragment_more_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/more_title"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="25sp"/>

        <android.support.v7.widget.CardView
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"
            app:cardCornerRadius="12dp">
            <Button
                android:id="@+id/fragment_more_btn_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="退出"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray">

        <!--个人信息-->
        <RelativeLayout
            android:id="@+id/fragment_more_rl_user_info"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white">
            <ImageView
                android:id="@+id/fragment_more_avatar"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                tools:background="@color/gray"/>
            <TextView
                android:id="@+id/fragment_more_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/fragment_more_avatar"
                tools:text="大鼻子若风"
                android:textColor="@color/colorPrimary"
                android:paddingTop="30dp"
                android:layout_marginStart="16dp"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_more_name"
                android:layout_toEndOf="@id/fragment_more_avatar"
                android:layout_marginStart="16dp"
                android:alpha="0.54"
                android:text="@string/more_below_name"
                android:textColor="@color/colorPrimary"/>
        </RelativeLayout>

        <!--我的Rant-->
        <LinearLayout
            android:id="@+id/fragment_more_ll_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_rant"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/more_rants"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>


        </LinearLayout>
        <!--我的评论-->
        <LinearLayout
            android:id="@+id/fragment_more_ll_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_cmt"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/more_cmts"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>


        </LinearLayout>
        <!--我赞过的-->
        <LinearLayout
            android:id="@+id/fragment_more_ll_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_up"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/more_ups"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>


        </LinearLayout>
        <!--我踩过的-->
        <LinearLayout
            android:id="@+id/fragment_more_ll_4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_down"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/more_downs"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>


        </LinearLayout>

        <!--关于-->
        <LinearLayout
            android:id="@+id/fragment_more_ll_5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="4dp"
            android:background="@color/white">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_about"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/more_about"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>


        </LinearLayout>






    </LinearLayout>

</LinearLayout>
